openshift/eap-containerfile/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coolstore-eap74
  labels:
    app: coolstore
    component: application
    version: eap74
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 8443
    targetPort: 8443
    protocol: TCP
  selector:
    app: coolstore
    component: application
    version: eap74
