openshift/eap-containerfile/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: coolstore-eap74
  labels:
    app: coolstore
    component: application
    version: eap74
spec:
  to:
    kind: Service
    name: coolstore-eap74
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
